--- a/firebase.json
+++ b/firebase.json
@@ -2,19 +2,14 @@
   "database": {
     "rules": "database.rules.json"
   },
- 
-  // "firestore": {
-  //   "rules": "firestore.rules",
-  //   "indexes": "firestore.indexes.json"
-  // },
-  
   "functions": {
     "predeploy": [
       "npm --prefix \"$RESOURCE_DIR\" run lint"
-    ]
+    ],
+    "source": "functions"
   },
   "hosting": {
-    "public": "public",
+    "public": "public", 
     "ignore": [
       "firebase.json",
       "**/.*",
@@ -23,5 +18,9 @@
   },
   "storage": {
     "rules": "storage.rules"
-  }
+  },
+   "firestore": {
+     "rules": "firestore.rules",
+     "indexes": "firestore.indexes.json"
+    }
 }
